# SpacetimeDB

./: Cargo.toml
crates/bench/benches/: subscription.rs
crates/cli/src/: config.rs
crates/cli/src/subcommands/generate/: mod.rs
crates/client-api/src/routes/: subscribe.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs
crates/core/src/client/: client_connection.rs  messages.rs
crates/core/src/db/datastore/locking_tx_datastore/: committed_state.rs  datastore.rs  mod.rs
crates/core/src/db/db_metrics/: mod.rs
crates/core/src/host/: module_host.rs
crates/core/src/sql/: execute.rs
crates/core/src/subscription/: module_subscription_actor.rs  module_subscription_manager.rs
crates/core/src/worker_metrics/: mod.rs
crates/execution/src/: iter.rs  lib.rs  pipelined.rs
crates/expr/src/: lib.rs
crates/metrics/src/: typed_prometheus.rs
crates/physical-plan/src/: plan.rs  printer.rs
crates/replication/: Cargo.toml
crates/replication/src/: commitlog.rs  lib.rs  node.rs  storage.rs
crates/sql/: Cargo.toml
crates/sql-parser/src/parser/: mod.rs
crates/sql/src/: errors.rs  lib.rs
crates/sql/src/ast/: ad_hoc.rs  mod.rs  sql.rs  sub.rs  subscription.rs
crates/sql/src/parser/: ad_hoc.rs  errors.rs  mod.rs  sql.rs  sub.rs  subscription.rs
